# vnmsim

./: .env  .eslintrc.json  .gitignore  LICENCE  PRIVACY.md  README.md  SECURITY.md  app.js  build.js  build.sh  entitlements.plist  gulpfile.babel.js  gulpfile.js  jest.config.js  middleware.ts  next.config.js  package-lock.json  package.json  todo.todo  transifex.yml  tsconfig.json  webpack.config.js
.githooks/: pre-push
.github/: FUNDING.yml
.github/workflows/: tauri-test.yml  tauri.yml  test.yml  transifex.yml
_old_version/samples/: even.json
_old_version/src/js/: locales.js  run.js  samples.js
_old_version/src/locale/: en.json
app/: layout.tsx  page.tsx  providers.tsx
app/[locale]/: app.tsx  page.tsx
graphics/: logo.psd
locale/: en.json
pages/: _app.js  _app.tsx  _document.tsx  index.tsx
pages/[locale]/: index.tsx
public/: styles.css  sw.js  sw.js.map  workbox-09483baf.js
samples/: addition.json  basic_operations.json  division.json  greater_than.json  modulo.json  multiplication.json  power.json  square_root.json  subtraction.json
src/: app.styles.ts  global.css  i18n.js  index.html  index.template.html  index.tsx  main.ts  samples.ts  styles.css  sw.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  migrated.json
src-tauri/capabilities/schemas/: capabilities.json  macOS-schema.json  plugin-manifests.json
src-tauri/icons/: icon.icns
src-tauri/shared/: .gitignore  Cargo.toml
src-tauri/shared/src/: lib.rs  types.rs
src-tauri/src/: lib.rs  main.rs
src-wasm/: Cargo.toml
src-wasm/src/: lib.rs  types.rs
src/app/: app.css  app.module.css  app.scss  app.styles.ts  app.tsx  layout.tsx  page.tsx  providers.tsx  samples.ts  samples.tsx
src/hooks/: store.ts
src/js/: cmds.js  dropzone.js  index.js  locales.js  stats.js
src/locale/: Localize.tsx  de.json  dispatcher.ts  en.json  es.json  it.json  locale.js
src/middleware/: execute.ts  immediate.ts  instant.ts  load.ts  reset.ts
src/modals/: help.styles.ts  help.tsx  settings.styles.ts  settings.tsx  stats.styles.ts
src/sass/: footer.sass  github.sass  header.sass  io.sass  main.sass  memory.sass  panels.sass  settings.sass  simulator.sass
src/selectors/: getVariables.ts  hasCode.ts  index.ts  isSimulatorRunning.ts
src/store/: LICENSE  alu.slice.ts  dispatcher.ts  dispatcher.tsx  errors.slice.ts  index.ts  ir.slice.ts  locale.context.ts  locale.ts  pc.slice.ts  ram.slice.ts  sim.slice.ts  sim.store.ts  sim.store.tsx  stats.slice.ts  stats.store.ts  stats.store.tsx  status.store.ts  status.store.tsx  theme.slice.ts
src/templates/: footer.pug  guide.pug  header.pug  index.pug  memory.pug  samples.pug  simulator.pug
src/tests/: alu.slice.test.ts  errors.slice.test.ts  execute.test.ts  instant.test.ts  ir.slice.test.ts  pc.slice.test.ts  ram.slice.test.ts  setupTests.ts  sim.slice.test.ts  simulatorState.test.ts  stats.slice.test.ts  tVariables.test.ts  validator.test.ts
src/themes/: dispatcher.ts  themes.js  utils.js  utils.ts
src/types/: alu.d.ts  editor.d.ts  error.d.ts  exportJSON.ts  fromWasm.ts  ir.d.ts  operation-result.d.ts  pc.d.ts  ram.d.ts  sim.d.ts  simulatorState.ts  stats.d.ts  status.d.ts  status.ts  steps.ts  theme.d.ts
src/utility/: gutter.ts  highlight.ts  io.ts  linter.ts  mode.ts  serialize.ts  tVariables.ts
(+137 files in other folders)
