[package]
name = "vnms"
version = "2.3.1"
description = "VNMS"
authors = ["you"]
license = ""
repository = ""
default-run = "vnms"
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.3", features = [ "fs-read-file", "dialog-open", "fs-write-file", "dialog-save", "updater"] }
shared = { path = "./shared", features = [] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
