[package]
name = "vnms"
version = "2.4.0"
description = "VNMS"
authors = ["you"]
license = ""
repository = ""
default-run = "vnms"
edition = "2021"
rust-version = "1.59"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = [] }
shared = { path = "./shared", features = [] }
tauri-plugin-dialog = "2.0.0-beta.0"
tauri-plugin-fs = "2.0.0-beta.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
